# kodi-repo-bootstrap

./: generate_repo.py  pyproject.toml
.github/workflows/: publish_pypi.yml
kodi_repo_bootstrap/addon/: addon.py
kodi_repo_bootstrap/repo/: version.py
kodi_repo_bootstrap/res/: repo_addon.xml.tpl
