[project]
name = "kodi-repo-bootstrap"
dynamic = [ "version" ]
description = "Bootstrap GIT repo for setting up a Kodi repository"
authors = [
    { name = "mammo0", email = "marc.ammon@hotmail.de" }
]
readme = "README.md"
license = "GPL-2.0-only"

requires-python = ">=3.12,<4.0"

[project.urls]
homepage = "https://github.com/mammo0/kodi-repo-bootstrap"

[project.scripts]
kodi-repo-bootstrap = "kodi_repo_bootstrap.main:run"


[tool.poetry]
include = [
    { path = "kodi_repo_bootstrap/res/repo_addon.xml.tpl", format = ["sdist", "wheel"] }
]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
# do not add commmit hash to distribution file (not alloed on (Test)PyPi)
metadata = false


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
